@@ -4,14 +4,13 @@ import os
 from distutils.core import setup
 from glob import glob
 from distutils.extension import Extension
-from Cython.Distutils import build_ext
 
 incdir_src = os.path.abspath("@top_srcdir@/include")
 incdir_build = os.path.abspath("@top_builddir@/include")
 libdir = os.path.abspath("@top_builddir@/src/.libs")
 
 ext = Extension("lhapdf",
-                ["lhapdf.pyx"],
+                ["lhapdf.cpp"],
                 include_dirs = [incdir_src, incdir_build],
                 extra_compile_args= "-I@prefix@/include @BOOST_CPPFLAGS@ @YAMLCPP_CPPFLAGS@".split(),
                 library_dirs = [libdir],
@@ -21,5 +20,4 @@ ext = Extension("lhapdf",
 
 setup(name = "LHAPDF",
       version = "@PACKAGE_VERSION@",
-      cmdclass = {"build_ext": build_ext},
       ext_modules = [ext])
