@@ -1,3 +1,11 @@
+2013-08-28  Andy Buckley  <andy.buckley@cern.ch>
+
+	* Removing necessity of Cython for tarball builds.
+
+2013-08-16  Karl Nordstrom
+
+	* Adding log-Q gradient extrapolation in AlphaS_Ipol.
+
 2013-08-16  Andy Buckley  <andy.buckley@cern.ch>
 
 	* 6.0.1 patch release.
